bad/class_different_type_of_overriding_method_04.example_compiler_output
ERROR
[1mbad/class_different_type_of_overriding_method_04.lat:7:5: [1;31merror: [0;1moverriding method type mismatch: overridden method `foo` has 2 arguments, but overriding method has 1 argument[m
    int foo(string x) {}
    [1;32m^[m
[1mbad/class_different_type_of_overriding_method_04.lat:3:5: [1;34mnote: [0;1moverridden method's definition is here[m
    int foo(string x, boolean y) {}
    [1;32m^[m
